--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: "build-test"
 on: # rebuild any PRs and main branch changes
-  pull_request:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -15,12 +15,12 @@ jobs:
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_FILE_BASE64 }}
         p12-password: ${{ secrets.CERTIFICATES_PASSWORD }}
-    - uses: Apple-Actions/download-provisioning-profiles@v1
-      with:
-        bundle-id: codes.orj.Example-iOS
-        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
-        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+#     - uses: Apple-Actions/download-provisioning-profiles@v1
+#       with:
+#         bundle-id: codes.orj.Example-iOS
+#         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+#         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+#         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
     - name: "#️⃣ Generate Build Number"
       id: buildnumber
       uses: einaregilsson/build-number@v2
