--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,21 +15,13 @@ jobs:
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_FILE_BASE64 }}
         p12-password: ${{ secrets.CERTIFICATES_PASSWORD }}
-#     - uses: Apple-Actions/download-provisioning-profiles@v1
+    - name: build ipa
+      run: ./Build
+      env: 
+        BUILD_NUMBER: 1
+#     - uses: Apple-Actions/upload-testflight-build@master
 #       with:
-#         bundle-id: codes.orj.Example-iOS
+#         app-path: .build/Artifacts/Example-iOS.ipa/Example-iOS.ipa
 #         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
 #         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
 #         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
-    - name: "#️⃣ Generate Build Number"
-      id: buildnumber
-      uses: einaregilsson/build-number@v2
-      with:
-        token: ${{ secrets.github_token }}
-    - run: ./Build
-    - uses: Apple-Actions/upload-testflight-build@master
-      with:
-        app-path: .build/Artifacts/Example-iOS.ipa/Example-iOS.ipa
-        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
-        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
